[gd_scene load_steps=6 format=3 uid="uid://dc2wnx4pct8q0"]

[ext_resource type="FontFile" uid="uid://bsjfb87fqxgdc" path="res://assets/fonts/HoboStd.otf" id="1_dstm6"]
[ext_resource type="PackedScene" uid="uid://bja24kn888bh1" path="res://assets/scenes/main_menu_background.tscn" id="1_qreil"]
[ext_resource type="Script" path="res://src/main_menu/main_menu.gd" id="2_6vb7x"]
[ext_resource type="AudioStream" uid="uid://dt2c0utq0ja8m" path="res://assets/sound/music/the_shire.ogg" id="3_80bhs"]
[ext_resource type="Script" path="res://src/main_menu/main_music.gd" id="3_uu0iw"]

[node name="Main Menu" type="Node3D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Control/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="menu_background" parent="Control/SubViewportContainer/SubViewport" instance=ExtResource("1_qreil")]

[node name="Panel" type="Panel" parent="Control"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 750.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
custom_minimum_size = Vector2(100, 150)
layout_direction = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = -305.0
offset_right = -75.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="Control/Panel/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
offset_right = 600.0
offset_bottom = 73.0
size_flags_vertical = 4
shortcut_context = NodePath("")
theme_override_fonts/font = ExtResource("1_dstm6")
theme_override_font_sizes/font_size = 64
text = "Start Game
"
script = ExtResource("2_6vb7x")

[node name="OptionsButton" type="Button" parent="Control/Panel/VBoxContainer"]
offset_top = 77.0
offset_right = 600.0
offset_bottom = 150.0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_dstm6")
theme_override_font_sizes/font_size = 64
text = "Settings
"
script = ExtResource("2_6vb7x")

[node name="ExitButton" type="Button" parent="Control/Panel/VBoxContainer"]
offset_top = 154.0
offset_right = 600.0
offset_bottom = 227.0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_dstm6")
theme_override_font_sizes/font_size = 64
text = "Exit Game
"
script = ExtResource("2_6vb7x")

[node name="Title" type="RichTextLabel" parent="Control/Panel"]
custom_minimum_size = Vector2(500, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 122.0
offset_top = 80.0
offset_right = -128.0
offset_bottom = -277.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_dstm6")
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center]School Shooter[/center]"
scroll_active = false

[node name="Main Music" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_80bhs")
autoplay = true
script = ExtResource("3_uu0iw")

[connection signal="pressed" from="Control/Panel/VBoxContainer/StartButton" to="Control/Panel/VBoxContainer/StartButton" method="_on_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/StartButton" to="Control/Panel/VBoxContainer/StartButton" method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/OptionsButton" to="Control/Panel/VBoxContainer/OptionsButton" method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/ExitButton" to="Control/Panel/VBoxContainer/ExitButton" method="_on_exit_button_pressed"]
